# spearmint

./: .gitignore  Cargo.toml  LICENSE  README.md  config.bind.example.toml  config.binding.example.toml  config.bot.example.toml  config.channel.example.toml  config.example.toml
configs/: bot.btcusdt.toml  bot.cowusdt.toml  bot.dogeusdt.toml  bot.enausdt.toml  bot.ethusdt.toml  bot.moveusdt.toml  bot.nearusdt.toml  bot.penguusdt.toml  bot.phausdt.toml  bot.suiusdt.toml  bot.vanausdt.toml  config.bind.example.toml  config.bot.example.toml
src/: bot.rs  cli.rs  main.rs  run.rs
src/connector/: binance.rs
src/data/: action.rs  args.rs  bot.rs  mod.rs  result.rs  streams.rs
src/model/: args.rs  bind.rs  bot.rs  mod.rs  result.rs  storage.rs  ticker.rs
src/notification/: telegram.rs
src/strategy/: helldiver.rs  martingle.rs  mod.rs
tests/: cli.rs
