[package]
name = "spearmint"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
toml = "0.5"
serde = { version = "1.0.133", features = ["derive"] }
comfy-table = "5.0.0"
serde_json = "1.0.75"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
dialoguer = "0.9.0"

[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled"]

[dev-dependencies]
assert_cmd = "1"
predicates = "1"