[package]
name = "spearmint"
version = "0.1.0"
edition = "2021"
default-run = "spearmint"

[[bin]]
name = "spearmint"
path = "src/main.rs"

[[bin]]
name = "fundingrate"
path = "src/bin/fundingrate.rs"

[[bin]]
name = "ticker"
path = "src/bin/ticker.rs"

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
toml = "0.5"
serde = { version = "1.0.133", features = ["derive"] }
comfy-table = "5.0.0"
serde_json = "1.0.75"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
dialoguer = "0.9.0"
chrono = "0.4.38"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0.94"
ta = "0.5.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures-util = "0.3.31"
log = "0.4.25"
fern = "0.7.1"

[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled"]

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
